# libbinrec

./: .dir-locals.el  .hgignore  .hgtags  CHANGES  CMakeLists.txt  COPYING  Makefile  README  binrec.pc.in
benchmarks/: blobs.h  common.h  main.c  memory.c  timing.c
benchmarks/blobs/: ppc32-dhry_noopt.c  ppc32-dhry_opt.c  ppc32-whet_noopt.c  ppc32-whet_opt.c
benchmarks/dhrystone/: 20161013.dif  dhry.h  dhry_1.c  dhry_2.c
benchmarks/whetstone/: whetstone.c
etc/ppc/: fres-table.txt  frsqrte-table.txt  gen-dhry-bin.sh  gen-ppc750cl-bin.sh  gen-whet-bin.sh  ppc750cl.s
etc/x86/: validate-test-asm.pl
include/: binrec++.h  binrec.h
src/: api.c  bitutils.h  common.h  endian.h  guest-ppc.h  host-x86.h  log.c  memory.c  memory.h  rtl-block.c  rtl-insn.c  rtl-internal.h  rtl-memory.c  rtl-opt.c  rtl-util.c  rtl.c  rtl.h
src/api/: version.c
src/guest-ppc/: guest-ppc-decode.h  guest-ppc-internal.h  guest-ppc-optimize.c  guest-ppc-rtl.c  guest-ppc-scan.c  guest-ppc-translate.c
src/host-x86/: host-x86-internal.h  host-x86-opcodes.h  host-x86-optimize.c  host-x86-registers.c  host-x86-translate.c
tests/: common.c  common.h  coverage-main.c  execute.c  execute.h  log-capture.c  log-capture.h  mem-wrappers.c  mem-wrappers.h  ppc-lut.c  ppc-lut.h  rtl-disasm-test.i  rtl-optimize-test.i  rtl-translate-test.i
tests/api/: binrec++.cc  create-handle-custom-malloc.c  create-handle-oom-no-log.c  create-handle-oom.c  enable-branch-callback.c  enable-branch-exit-flag.c  enable-chaining-windows-seh.c  enable-chaining.c  enable-verify.c  guest-supported.c  host-supported.c  log.c  native-alloc.c  native-arch.c  native-features.c  readonly.c  set-code-range.c  set-inline.c  set-insn-callbacks.c  set-opt-flags.c  translate-address-out-of-range.c  translate-basic.c  translate-code-range.c  translate-create-unit-oom.c  translate-finalize-oom.c  translate-invalid-code-range.c  translate-invalid-guest.c  translate-invalid-host.c  translate-oom.c  translate-optimize-oom.c  translate-readonly.c  version.c
tests/bitutils/: bitrev32.c  bits-to-double.c  bits-to-float.c  clz32.c  clz64.c  ctz32.c  ctz64.c  double-to-bits.c  float-to-bits.c  noopt-bitrev32.c  noopt-clz32.c  noopt-clz64.c  noopt-ctz32.c  noopt-ctz64.c  noopt-popcnt32.c  noopt-popcnt64.c  noopt-ror32.c  noopt-ror64.c  popcnt32.c  popcnt64.c  ror64.c
tests/endian/: bswap16.c  bswap32.c  bswap64.c  bswap_be16.c  bswap_be32.c  bswap_be64.c  bswap_le16.c  bswap_le32.c  bswap_le64.c  noopt-bswap16.c  noopt-bswap32.c  noopt-bswap64.c  noopt-bswap_be16.c  noopt-bswap_be32.c  noopt-bswap_be64.c  noopt-bswap_le16.c  noopt-bswap_le32.c  noopt-bswap_le64.c
tests/guest-ppc/: common.h
tests/guest-ppc/exec/: 750cl-assume-no-snan-fast-stfs.c  750cl-assume-no-snan.c  750cl-branch-exit-test.c  750cl-chain.c  750cl-common.i  750cl-constant-gqrs.c  750cl-fast-fmadds.c  750cl-fast-fmuls.c  750cl-fast-stfs.c  750cl-fnmadd-zero-sign.c  750cl-forward-loads.c  750cl-hostopt.c  750cl-ignore-fpscr-vxfoo.c  750cl-native-ieee-nan.c  750cl-native-ieee-underflow.c  750cl-native-reciprocal.c  750cl-no-fpscr-state.c  750cl-noopt.c  basic.c  (+39 more)
tests/host-x86/: common.h
tests/memory/: alloc-custom.c  code-alloc-custom.c  code-alloc-oom.c  code-alloc.c
tests/rtl/: block-add-edge-duplicate.c  block-add-edge-entries-overflow-oom.c  block-add-edge-entries-overflow.c  block-add-edge-exits-overflow.c  block-add-edge.c  block-add-expand-array-oom.c  block-add-expand-array.c  block-add.c  block-remove-edge-entries-overflow.c  block-remove-edge.c  insn-add-reassign.c  insn-add-undefined.c  insn-add-wrong-type.c  insn-add-zero-arg.c  insn-add.c  insn-addi-range.c  insn-addi-reassign.c  insn-addi-undefined.c  insn-addi-wrong-type.c  insn-addi-zero-arg.c  insn-addi.c  insn-and.c  insn-andi.c  insn-atomic_inc-reassign.c  insn-atomic_inc-undefined.c  insn-atomic_inc.c  insn-bfext.c  insn-bfins-reassign.c  insn-bfins-undefined.c  insn-bfins-wrong-type.c  insn-bfins-zero-arg.c  insn-bfins.c  insn-bswap.c  insn-call_addr-wrong-type.c  insn-call_addr-zero-arg.c  insn-call_addr.c  insn-clz-mixed-types.c  insn-clz-reassign.c  insn-clz-undefined.c  insn-clz-wrong-type.c  (+194 more)
(+3471 files in other folders)
